--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,8 @@ rvm:
   - 2.3.0
 before_install: gem install bundler -v 1.11.2
 bundler_args: --without visual
+script:
+  - CODECLIMATE_REPO_TOKEN=24ec68be26fb0b38023ef4dd768fdc4cf89148d2c2fe89830501c52fd31764b4 bundle exec rake
+addons:
+  code_climate:
+    repo_token: 24ec68be26fb0b38023ef4dd768fdc4cf89148d2c2fe89830501c52fd31764b4
